@@ -1,3 +1,15 @@
+2009-12-07  Juri Linkov  <juri@jurta.org>
+
+	Correctly restore original Isearch point.  (Bug#4994)
+
+	* isearch.el (isearch-mode): Move `isearch-push-state' after
+	`(run-hooks 'isearch-mode-hook)'.
+	(isearch-cancel): When `isearch-push-state-function' is defined,
+	let-bind `isearch-cmds' to the first state (the last element of
+	`isearch-cmds') and call `isearch-top-state' (it calls pop-state
+	function and restores the original point).  Otherwise, move point
+	to `isearch-opoint'.
+
 2009-12-07  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* international/mule-cmds.el (ucs-names): Weed out at compile-time the
